# PL-SQL

./: Criacao_Esquema.sql  README.md  carga_cadastros.py  carga_notas_fiscais.py  criacao_esquema.py  db_conexao.py  main.py  pyproject.toml
.github/workflows/: python-package.yml
DDL/: Criacao_Esquema.sql  Criacao_Faturamento.sql  Criacao_Fonte.sql  Criacao_View.sql
DML/: TG_Update_Tabela_Faturamento.sql
DQL/: Rel_Faturamento_Dia.sql  Rel_Produtos_Acima_300ml.sql  Rel_Rank_Volume_Mes.sql  Rel_Vendas_por_Bairro_Vendedor.sql
FUNCTIONS/: obter_embalagem_produto.sql
PLSQL/: plsql.sql
PROCEDURES/: P_Incluir_Venda.sql
consultas/: select_all.sql
pyFakerData/: faker_vendas_diaria.py
pyOracle/: carga_cadastros.py  carga_itens_notas_fiscais.py  carga_notas_fiscais.py  criacao_esquema.py
pyOracle/DML/: carga_notas_fiscais.py
sqlDDL/: Criacao_Fonte.sql  Criacao_View.sql
sqlDML/: Carga_Procedures.sql  Carga_Tabela_Faturamento.sql  Carga_Tabelas_Cadastrais.sql  Carga_Tabelas_Fonte.sql  Carga_Vendedores_Fonte_para_Cadastrais.sql
sqlDQL/: Rel_Venda_por_Bairro_Vendedor_4k.sql  Rel_Volume_Compras_Mes.sql
sqlOracle/DDL/: Criacao_Esquema.sql  Criacao_Procedure.sql
sqlOracle/DQL/: Rel_Comissao_Vendedores.sql  Rel_Vendas_Mes_Cliente.sql
sqlOracle/FUNCTIONS/: obter_categoria_faturamento.sql
sqlOracle/TRIGGERS/: TG_Update_Tabela_Faturamento.sql
sqlPLSQL/: plsql.sql
src/: carga_notas_fiscais.csv
