[tool.poetry]
name = "pl-sql"
version = "0.1.0"
description = ""
authors = ["bruno <bruno.mcreal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cx-Oracle = "^8.3.0"
python-dotenv = "^0.21.0"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
faker = "^15.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
